--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -28,6 +28,10 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+  background-color: #f9f6f2;
+  background-image: url('../../assets/Background\ line\ design-color-01.svg');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 ol, ul {
 	list-style: none;
@@ -45,10 +49,6 @@ table {
 	border-spacing: 0;
 }
 
-body {
-    background-color: #f9f6f2;
-}
-
 .Myplaylist {
     font-family: "Borel", cursive;
     font-weight: 400;
@@ -63,6 +63,7 @@ body {
     display: flex;
     justify-content: space-around;
     padding-top: 5%;
+    padding-bottom:15%;
 }
 
 .playlistContainer{
@@ -74,3 +75,4 @@ body {
     padding: 30px;
     margin-right: 18%;
 }
+
