--- a/src/components/SongPlayer/SongPlayer.module.css
+++ b/src/components/SongPlayer/SongPlayer.module.css
@@ -3,7 +3,8 @@
     height: 16rem;
     overflow: hidden;
     object-fit: cover;
-    opacity: 0.8;
+    opacity: 0.7;
+    
     border-radius: .2rem;
     padding: 1.5rem;
 }
@@ -15,6 +16,12 @@
     stroke: black;
     stroke-width: 15px;
     overflow: visible;
+    cursor: pointer;
+}
+
+.iconPlay:hover{
+    fill:#1ed760;
+    stroke:#1ed760;
 }
 
 .songplayerContainer{
