--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -17,3 +17,33 @@
   padding: 30px;
   margin-left: 18%;
 }
+
+.trackContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: .2rem 0;
+}
+
+.iconsContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 15%;
+  align-items: center;
+}
+
+.icon{
+  width: 1.5rem;
+  height:1.5rem;
+  fill:black;
+  stroke: black;
+  stroke-width: 15px;
+  overflow: visible;
+  cursor: pointer;
+}
+
+.icon:hover{
+  fill:#1ed760;
+  stroke: #1ed760;
+}
