--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -54,25 +54,28 @@ table {
     font-weight: 400;
     font-style: normal;
     font-size: 2.5rem;
-    padding-top: 15%;
+    padding-top: 10%;
     padding-bottom: 1%;
     text-align: center;
 }
 
 .displayContainer{
     display: flex;
-    justify-content: space-around;
-    padding-top: 5%;
-    padding-bottom:15%;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 5%;
 }
 
 .playlistContainer{
     background-color: white;
-    width: 23%;
+    width: 41%;
     height: auto;
     border: 2px solid black;
     border-radius: 15px;
     padding: 30px;
-    margin-right: 18%;
+}
+
+.allContainer{
+    padding: 4% 15% 35%;
 }
 
