--- a/src/components/SongPlayer/SongPlayer.module.css
+++ b/src/components/SongPlayer/SongPlayer.module.css
@@ -24,13 +24,7 @@
     stroke:#1ed760;
 }
 
-.songplayerContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
+
 
 .textContainer{
     display: flex;
@@ -61,10 +55,26 @@
     font-size: .9rem;
 }
 
+.songplayerContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:30%;
+    margin-top: 1.5rem;
+    padding-top: 0%;
+    
+}
+
 .tapedContainer{
+    display: flex;
+    justify-content: center;
     width: auto;
     position: relative;
     text-align: center;
+    height: 100%;
+    margin-top: 0%;
 }
 
 .WashitapeIcon{
@@ -77,25 +87,21 @@
 }
 
 #washi1 {
-    top: 0;
-    left: 0;
+    top: -45px;
+    transform: rotate(45deg);
 }
 
 #washi2 {
-    top: 0;
-    right: 0;
-    transform: rotate(-90deg);
+    bottom: -40px;
+    transform: rotate(45deg);
 }
 
-#washi3 {
-    bottom: 0;
-    left: 0;
-    transform: rotate(-90deg);
+.iframe{
+    width: 100%;
+    height: 100%;
+    margin-top: 0%;
+    padding: 0;
+    margin-bottom: 0%;
 }
 
-#washi4 {
-    bottom: 0;
-    right: 0;
-    transform: rotate(-180deg);
-}
 
