--- a/src/components/Tracklist/Tracklist.module.css
+++ b/src/components/Tracklist/Tracklist.module.css
@@ -29,7 +29,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 12%;
     align-items: center;
   }
   
@@ -46,4 +45,7 @@
   .icon:hover{
     fill:#1ed760;
     stroke: #1ed760;
+  }
+
+  @media screen and (max-width: 320px) {
   }
